# Simons-Game

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  main
.cache/clangd/index/: Alaska.cpp.59937F80CD363CDF.idx  Alaska.h.080F9D1AA11C5023.idx  Animation.cpp.C4A06A6A40CF8619.idx  Animation.h.F4EDEC1BC674550B.idx  Archer.cpp.66D4D2FA34C26C1D.idx  Archer.h.34C4F7C59864AA0F.idx  Arrow.cpp.C507D45A9999DB23.idx  Arrow.h.6DAE6DCD832EEF8E.idx  Being.cpp.2138C9D66D729E48.idx  Being.h.32E7AE0EFB63DE05.idx  Button.cpp.84A1F0DD25B85389.idx  Button.h.768D8B8CAF6E189B.idx  Character.cpp.68FFE1A99EB55FFE.idx  Character.h.E7E8D03112BF4ABE.idx  CollisionManager.cpp.E1A99CD94FEEEAEB.idx  CollisionManager.h.0ED061C1755700AD.idx  ComplexAnimation.cpp.13943C932B8DE8CF.idx  ComplexAnimation.h.94A4A46C0A01D665.idx  Enemy.cpp.6AB278AF56762A04.idx  Enemy.h.88C51DD791673282.idx  Entity.cpp.3C94B76738830622.idx  Entity.h.0CEE5F28DAD4F713.idx  EntityList.cpp.68172CF2B2629F34.idx  EntityList.h.42AB136D3E82D9E1.idx  EventsManager.cpp.8B7A04F05B05A729.idx  EventsManager.h.7A99D2FA34AA3714.idx  Game.cpp.CD169BBE7B26EBF1.idx  Game.h.FA27E69E0019C480.idx  GameOverState.cpp.99B535820A698472.idx  GameOverState.h.DAB507C1CD43B7D5.idx  GraphicManager.cpp.0DA25896FA0F258E.idx  GraphicManager.h.117269391646F31C.idx  Ground.cpp.A976EE5539445CBA.idx  Ground.h.C1E61F1D8671E9EF.idx  Horse.cpp.175162B5B67B8262.idx  Horse.h.D0FC0FB877AD3BD6.idx  Ice.cpp.103F527ADC5C6719.idx  Ice.h.ABFC7CBDF50A0C73.idx  InputManager.cpp.99ED5D7D33EBCD2C.idx  InputManager.h.28A426DAD64001F3.idx  (+52 more)
Assets/: Alaska.txt  Level1.txt  Level2.txt  Vulcano.txt  dynamicEntitiesSave.txt  leaderboard.txt  savefile.txt  staticEntitiesSave.txt
SFML-2.5.1/include/SFML/: tags
Tec Prog Jogo/: CollisionManager.cpp  CollisionManager.h  Entity.cpp  Entity.h  EventsManager.cpp  EventsManager.h  Game.cpp  Game.h  Ground.cpp  List.h  MakeFile  Makefile  Player.cpp  Player.h  PlayerInputManager.cpp  PlayerInputManager.h  Tec Prog Jogo.vcxproj  Tec Prog Jogo.vcxproj.filters  main  main.cpp
Tec Prog Jogo/Debug/: Tec Prog Jogo.exe.recipe  Tec Prog Jogo.ilk  vc143.idb
Tec Prog Jogo/Debug/Tec Prog Jogo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tec Prog Jogo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tec Prog Jogo/include/: EntityList.h  EventsManager.h  Game.h  Ground.h  PlayerInputManager.h
Tec Prog Jogo/include/Entities/: Ground.h
Tec Prog Jogo/include/Managers/: EventsManager.h
Tec Prog Jogo/src/: CollisionManager.cpp  Entity.cpp  EventsManager.cpp  Game.cpp  Ground.cpp  Player.cpp  PlayerInputManager.cpp
Tec Prog Jogo/x64/Debug/: vc143.idb
Tec Prog Jogo/x64/Debug/Tec Prog Jogo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tec Prog Jogo.lastbuildstate
TheWizard_Build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
TheWizard_Build_MinGW/: CMakeCache.txt  cmake_install.cmake
TheWizard_Build_Ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
UML/: README.md  UML-06-06 - Copia.mdj  UML-06-06.mdj  UML-FINAL.mdj  UML-final - unregistred.mdj  UML-final.mdj  UML.mdj
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  TheWizard  build.ninja  cmake_install.cmake
include/: Being.h  Ente.h  Game.h  main.h
include/Defines/: SOURCEDIR.h  SOURCEDIR.h.in
include/Entities/: Arrow.h  Character.h  Entity.h  Ground.h  Obstacle.h  PlayerProjectile.h  Projectile.h
include/Entities/Characters/: Character.h  Enemy.h  Player.h
include/Entities/Characters/Enemies/: Archer.h  Enemy.h  Horse.h  NecroMancer.h  Warrior.h
include/Entities/Obstacles/: Ground.h  Ice.h  Lava.h  Obstacle.h
include/Entities/Projectiles/: Arrow.h  PlayerProjectile.h  Projectile.h  Skull.h
include/GraphicElements/: AnimatedSprite.h  Animation.h  Buttom.h  Button.h  ComplexAnimation.h  SimpleAnimation.h  SimpleSprite.h
include/Levels/: Alaska.h  Level.h  Level1.h  Level2.h  Vulcano.h
include/Managers/: CollisionManager.h  EventsManager.h  GraphicManager.h  InputManager.h  PlayerInputManager.h
include/Math/: Coord.h  EntityList.h  List.h  Math.h
include/Menus/: LeaderBoard.h  MainMenu.h  Menu.h  NewGameMenu.h  PauseMenu.h
include/Observers/: MenuObserver.h  Observer.h  PlayerInputManager.h  StateObserver.h  TextInputObserver.h
include/States/: GameOverState.h  LoadGameState.h  NewGameState.h  State.h  StateMachine.h
src/: Alaska.cpp  AnimatedSprite.cpp  Animation.cpp  Archer.cpp  Arrow.cpp  Being.cpp  Buttom.cpp  Button.cpp  Character.cpp  CollisionManager.cpp  ComplexAnimation.cpp  Enemy.cpp  Ente.cpp  Entity.cpp  EntityList.cpp  EventsManager.cpp  Game.cpp  GameOverState.cpp  GraphicManager.cpp  Ground.cpp  Horse.cpp  Ice.cpp  InputManager.cpp  Lava.cpp  LeaderBoard.cpp  Level.cpp  Level1.cpp  Level2.cpp  LoadGameState.cpp  MainMenu.cpp  Math.cpp  Menu.cpp  NecroMancer.cpp  NewGameMenu.cpp  NewGameState.cpp  Observer.cpp  Obstacle.cpp  PauseMenu.cpp  Player.cpp  PlayerInputManager.cpp  (+14 more)
